added --add-opens to prevent test failure