@@ -383,7 +383,10 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <configuration>
-                    <argLine>-Xmx512m -Djava.net.preferIPv4Stack=true</argLine>
+		    <argLine>
+			-Xmx512m -Djava.net.preferIPv4Stack=true
+			--add-opens java.base/java.lang=ALL-UNNAMED
+		    </argLine>
                     <trimStackTrace>false</trimStackTrace>
                     <includes>
                         <include>**/*Test.java</include>
